--- a/06-3_column_preview_card_component/index.html
+++ b/06-3_column_preview_card_component/index.html
@@ -7,72 +7,69 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/general.css">
-  <link rel="stylesheet" href="css/queries.css">
 
   <title>Frontend Mentor | 3-column preview card component</title>
 </head>
 
 <body>
   <main>
-    <section class="preview-card-component">
+    <section class="card-section">
       <div class="container grid grid--3-columns">
-
-        <div class="column">
-          <figure class="icon-container">
-            <img src="images/icon-sedans.svg" alt="Sedan Icon" class="icon">
+        <div class="card card--sedan">
+          <figure class="card__icon-wrapper">
+            <img src="images/icon-sedans.svg" alt="Sedan Icon" class="card__icon">
           </figure>
-          <div class="text-content">
-            <h2 class="secondary-heading">
+          <div class="card__description">
+            <h1 class="card__title">
               Sedans
-            </h2>
-            <p class="text">
+            </h1>
+            <p class="card__text">
               Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.
             </p>
           </div>
-          <button class="cta">
+          <button class="card__btn card__btn--sedan">
             Learn More
           </button>
         </div>
 
-        <div class="column">
-          <figure class="icon-container">
-            <img src="images/icon-suvs.svg" alt="Suv Icon" class="icon">
+        <div class="card card--suv">
+          <figure class="card__icon-wrapper">
+            <img src="images/icon-suvs.svg" alt="Suv Icon" class="card__icon">
           </figure>
-          <div class="text-content">
-            <h2 class="secondary-heading">
+          <div class="card__description">
+            <h1 class="card__title">
               SUVs
-            </h2>
-            <p class="text">
+            </h1>
+            <p class="card__text">
               Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.
             </p>
           </div>
-          <button class="cta">
+          <button class="card__btn card__btn--suv">
             Learn More
           </button>
         </div>
 
-        <div class="column">
-          <figure class="icon-container">
-            <img src="images/icon-luxury.svg" alt="Luxury Icon" class="icon">
+        <div class="card card--luxury">
+          <figure class="card__icon-wrapper">
+            <img src="images/icon-luxury.svg" alt="Luxury Icon" class="card__icon">
           </figure>
-          <div class="text-content">
-            <h2 class="secondary-heading">
+          <div class="card__description">
+            <h1 class="card__title">
               Luxury
-            </h2>
-            <p class="text">
+            </h1>
+            <p class="card__text">
               Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.
             </p>
           </div>
-          <button class="cta">
+          <button class="card__btn card__btn--luxury">
             Learn More
           </button>
         </div>
       </div>
+
     </section>
   </main>
 
-  <script src="script.js"></script>
 </body>
 
 </html>
